--- a/curriculum.html
+++ b/curriculum.html
@@ -88,7 +88,7 @@
                 <h3>Contato</h3>
                 <ul id="contact">
                     <li><i class="fa-sharp fa-solid fa-envelope"></i>firme.caio@gmail.com</li>
-                    <li><i class="fa-sharp fa-solid fa-phone"></i>(84)986359717</li>
+                    <li><i class="fa-sharp fa-solid fa-phone"></i>(84)9XXXX-XXXX</li>
                     <li><i class="fa-solid fa-location-dot"></i>Natal, RN</li>
                 </ul>
             </div>
